// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Launch when a launch is failed renders it failed 1`] = `
<div
  className="launch"
>
  <WithStyles(Paper)
    className="status fail"
    elevation={1}
  >
    <pure(GroupWorkRoundedIcon)
      className="statusIcon"
    />
  </WithStyles(Paper)>
  <div
    className="connector"
  />
  <WithStyles(Paper)
    className="launchInfo"
  >
    <WithStyles(Grid)
      container={true}
      spacing={8}
    >
      <WithStyles(Grid)
        item={true}
        xs={12}
      >
        <div>
          <WithStyles(Typography)>
            Test
          </WithStyles(Typography)>
          <WithStyles(Typography)
            align="right"
            color="textSecondary"
            variant="caption"
          >
            id1
          </WithStyles(Typography)>
        </div>
      </WithStyles(Grid)>
      <WithStyles(Grid)
        item={true}
        xs={12}
      >
        <WithStyles(Typography)
          color="textSecondary"
        >
          2019-01-01
        </WithStyles(Typography)>
      </WithStyles(Grid)>
      <WithStyles(Grid)
        item={true}
        xs={12}
      >
        <WithStyles(Typography)>
          Details
        </WithStyles(Typography)>
      </WithStyles(Grid)>
    </WithStyles(Grid)>
  </WithStyles(Paper)>
</div>
`;

exports[`Launch when a launch is successful renders it successful 1`] = `
<div
  className="launch"
>
  <WithStyles(Paper)
    className="status success"
    elevation={1}
  >
    <pure(GroupWorkRoundedIcon)
      className="statusIcon"
    />
  </WithStyles(Paper)>
  <div
    className="connector"
  />
  <WithStyles(Paper)
    className="launchInfo"
  >
    <WithStyles(Grid)
      container={true}
      spacing={8}
    >
      <WithStyles(Grid)
        item={true}
        xs={12}
      >
        <div>
          <WithStyles(Typography)>
            Test
          </WithStyles(Typography)>
          <WithStyles(Typography)
            align="right"
            color="textSecondary"
            variant="caption"
          >
            id1
          </WithStyles(Typography)>
        </div>
      </WithStyles(Grid)>
      <WithStyles(Grid)
        item={true}
        xs={12}
      >
        <WithStyles(Typography)
          color="textSecondary"
        >
          2019-01-01
        </WithStyles(Typography)>
      </WithStyles(Grid)>
      <WithStyles(Grid)
        item={true}
        xs={12}
      >
        <WithStyles(Typography)>
          Details
        </WithStyles(Typography)>
      </WithStyles(Grid)>
    </WithStyles(Grid)>
  </WithStyles(Paper)>
</div>
`;

exports[`Launch when a launch is upcoming renders it upcoming 1`] = `
<div
  className="launch"
>
  <WithStyles(Paper)
    className="status upcoming"
    elevation={1}
  >
    <pure(GroupWorkRoundedIcon)
      className="statusIcon"
    />
  </WithStyles(Paper)>
  <div
    className="connector"
  />
  <WithStyles(Paper)
    className="launchInfo"
  >
    <WithStyles(Grid)
      container={true}
      spacing={8}
    >
      <WithStyles(Grid)
        item={true}
        xs={12}
      >
        <div>
          <WithStyles(Typography)>
            Test
          </WithStyles(Typography)>
          <WithStyles(Typography)
            align="right"
            color="textSecondary"
            variant="caption"
          >
            id1
          </WithStyles(Typography)>
        </div>
      </WithStyles(Grid)>
      <WithStyles(Grid)
        item={true}
        xs={12}
      >
        <WithStyles(Typography)
          color="textSecondary"
        >
          2019-01-01
        </WithStyles(Typography)>
      </WithStyles(Grid)>
      <WithStyles(Grid)
        item={true}
        xs={12}
      >
        <WithStyles(Typography)>
          Details
        </WithStyles(Typography)>
      </WithStyles(Grid)>
    </WithStyles(Grid)>
  </WithStyles(Paper)>
</div>
`;

exports[`Launch when launch does not have details does not render the details section 1`] = `
<div
  className="launch"
>
  <WithStyles(Paper)
    className="status success"
    elevation={1}
  >
    <pure(GroupWorkRoundedIcon)
      className="statusIcon"
    />
  </WithStyles(Paper)>
  <div
    className="connector"
  />
  <WithStyles(Paper)
    className="launchInfo"
  >
    <WithStyles(Grid)
      container={true}
      spacing={8}
    >
      <WithStyles(Grid)
        item={true}
        xs={12}
      >
        <div>
          <WithStyles(Typography)>
            Test
          </WithStyles(Typography)>
          <WithStyles(Typography)
            align="right"
            color="textSecondary"
            variant="caption"
          >
            id1
          </WithStyles(Typography)>
        </div>
      </WithStyles(Grid)>
      <WithStyles(Grid)
        item={true}
        xs={12}
      >
        <WithStyles(Typography)
          color="textSecondary"
        >
          2019-01-01
        </WithStyles(Typography)>
      </WithStyles(Grid)>
    </WithStyles(Grid)>
  </WithStyles(Paper)>
</div>
`;

exports[`Launch when launch does not have mission ids does not render the mission ids info 1`] = `
<div
  className="launch"
>
  <WithStyles(Paper)
    className="status success"
    elevation={1}
  >
    <pure(GroupWorkRoundedIcon)
      className="statusIcon"
    />
  </WithStyles(Paper)>
  <div
    className="connector"
  />
  <WithStyles(Paper)
    className="launchInfo"
  >
    <WithStyles(Grid)
      container={true}
      spacing={8}
    >
      <WithStyles(Grid)
        item={true}
        xs={12}
      >
        <div>
          <WithStyles(Typography)>
            Test
          </WithStyles(Typography)>
        </div>
      </WithStyles(Grid)>
      <WithStyles(Grid)
        item={true}
        xs={12}
      >
        <WithStyles(Typography)
          color="textSecondary"
        >
          2019-01-01
        </WithStyles(Typography)>
      </WithStyles(Grid)>
      <WithStyles(Grid)
        item={true}
        xs={12}
      >
        <WithStyles(Typography)>
          Details
        </WithStyles(Typography)>
      </WithStyles(Grid)>
    </WithStyles(Grid)>
  </WithStyles(Paper)>
</div>
`;
